--- a/css/map_styles.css
+++ b/css/map_styles.css
@@ -18,6 +18,12 @@ html, body, .map-container, #map-canvas {
 	padding: 0;
 }
 
+
+#map-canvas {
+	/*z-index: -1;*/
+}
+
+
 /* Custom, iPhone Retina */
 @media only screen and (min-width : 320px){
 	.title-logo {
